# typer-racer

./: .gitignore  Cargo.toml  HOWTO.md  LICENSE  Makefile  Plan0.md  Plan1.md  Plan2.md  README.md  Trunk.toml  build.sh  index.html  index.js  replay.json
scripts/: pbcat
src/: app_init.rs  game.rs  impl_typer_racer_app.rs  keyboard.rs  lib.rs  main.rs  quote_loader.rs  tests.rs  time.rs  typer_racer_app.rs  utils.rs
src/keyboard/: display.rs  event.rs  input.rs  mod.rs  onscreen.rs  replay.rs  simulator.rs
src/ui/: helper.rs  mod.rs  sections.rs  sections_footer.rs  sections_keyboard.rs  sections_left.rs  sections_right.rs  sections_top.rs
typer-racer/: Cargo.toml
