[package]
name = "typer-racer"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
eframe = { version = "0.27", features = ["default"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = ["Window", "Storage", "Performance", "PerformanceTiming"] }

# Logging and error handling for wasm
console_error_panic_hook = "0.1.7"
console_log = "1.0"
log = "0.4"

[profile.release]
lto = true
