[package]
name = "ghost_typer"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <you@example.com>"]
description = "Ghost Typer: Endurance Typing Race Game (WebAssembly)"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
egui = { version = "0.27", features = ["web"] }
egui_extras = "0.27"
egui-winit = "0.27"
egui-wgpu = "0.27"
web-sys = { version = "0.3", features = ["Window", "Document", "HtmlCanvasElement", "Clipboard", "ClipboardEvent", "Navigator"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
js-sys = "0.3"
getrandom = { version = "0.2", features = ["js"] }
log = "0.4"
console_error_panic_hook = "0.1"
console_log = "1.0"

[profile.dev]
opt-level = 1

[profile.release]
opt-level = "z"
lto = true
